--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LogiMaster CFMoto</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      darkMode: 'class', // Disables automatic system dark mode switching
+      theme: {
+        extend: {
+          colors: {
+            // Ensure consistency if needed
+          }
+        }
+      }
+    }
+  </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/forge/1.3.1/forge.min.js"></script>
 
   <style>
@@ -14,9 +26,11 @@
     html {
       font-family: 'Google Sans Text', 'Google Sans';
       font-size: 14px;
-      color-scheme: light dark;
-      background: light-dark(white, black);
-      color: light-dark(black, white);
+      /* Enforce consistent light background */
+      background-color: #f8fafc;
+      /* slate-50 */
+      color: #0f172a;
+      /* slate-900 */
     }
   </style>
 
